--- a/ClientControl/MainWindow.xaml
+++ b/ClientControl/MainWindow.xaml
@@ -79,7 +79,7 @@
 
                     <Button Grid.Row="0" Grid.Column="0" Name="btnChat" Content="Chat" Click="BtnChat_Click" Height="60" Margin="10 10 10 10"/>
                     <Button Grid.Row="0" Grid.Column="1" Name="btnFileExplorer" Content="File Explorer" Height="60" Margin="10 10 10 10"/>
-                    <Button Grid.Row="1" Grid.Column="0" Name="btnViewScreen" Content="View Screen" Height="60" Margin="10 10 10 10"/>
+                    <Button Grid.Row="1" Grid.Column="0" Name="btnViewScreen" Content="View Screen" Height="60" Margin="10 10 10 10" Click="BtnViewScreen_Click"/>
                     <Button Grid.Row="1" Grid.Column="1" Name="btnMessageBox" Content="Message Box" Height="60" Margin="10 10 10 10"/>
                     <Button Grid.Row="2" Grid.Column="0" Name="btnShutdown" Content="Shutdown" Height="60" Margin="10 10 10 10"/>
                     <Button Grid.Row="2" Grid.Column="1" Name="btnRestart" Content="Restart" Height="60" Margin="10 10 10 10"/>
