--- a/ClientControl/MainWindow.xaml
+++ b/ClientControl/MainWindow.xaml
@@ -13,7 +13,7 @@
 		TextOptions.TextRenderingMode="Auto"
 		Background="{DynamicResource MaterialDesignPaper}"
 		FontFamily="{DynamicResource MaterialDesignFont}"
-        Title="MainWindow" Height="337.5" Width="477.5" Closing="Window_Closing" WindowStyle="None" ResizeMode="NoResize">
+        Title="MainWindow" Height="351.5" Width="477.5" Closing="Window_Closing" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -44,7 +44,15 @@
                     </ListView.View>
                 </ListView>
 
-                <Button Grid.Row="1" Name="btnRefreshUserList" Content="Refresh" Click="BtnRefreshUserList_Click"/>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Column="0" Name="btnChangeName" Content="ReName" Margin="0 0 5 0" Click="BtnChangeName_Click"/>
+                    <Button Grid.Column="1" Name="btnRefreshUserList" Content="Refresh" Click="BtnRefreshUserList_Click" Margin="5 0 0 0"/>
+                </Grid>
+                
             </Grid>
 
             <Border Grid.Column="1" Background="BlueViolet" Margin="0 5 0 5" CornerRadius="2"/>
@@ -72,17 +80,19 @@
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <Button Grid.Row="0" Grid.Column="0" Name="btnChat" Content="Chat" Click="BtnChat_Click" Height="60" Margin="10 10 10 10"/>
-                    <Button Grid.Row="0" Grid.Column="1" Name="btnFileExplorer" Content="File Explorer" Height="60" Margin="10 10 10 10"/>
-                    <Button Grid.Row="1" Grid.Column="0" Name="btnViewScreen" Content="View Screen" Height="60" Margin="10 10 10 10" Click="BtnViewScreen_Click"/>
-                    <Button Grid.Row="1" Grid.Column="1" Name="btnMessageBox" Content="Message Box" Height="60" Margin="10 10 10 10"/>
-                    <Button Grid.Row="2" Grid.Column="0" Name="btnShutdown" Content="Shutdown" Height="60" Margin="10 10 10 10"/>
-                    <Button Grid.Row="2" Grid.Column="1" Name="btnRestart" Content="Restart" Height="60" Margin="10 10 10 10"/>
+                    <CheckBox Name="ckbOverServer" Content="Over Server" Margin="10 0 0 0"/>
+                    <Button Grid.Row="1" Grid.Column="0" Name="btnChat" Content="Chat" Click="BtnChat_Click" Height="60" Margin="10 10 10 10"/>
+                    <Button Grid.Row="1" Grid.Column="1" Name="btnFileExplorer" Content="File Explorer" Height="60" Margin="10 10 10 10"/>
+                    <Button Grid.Row="2" Grid.Column="0" Name="btnViewScreen" Content="View Screen" Height="60" Margin="10 10 10 10" Click="BtnViewScreen_Click"/>
+                    <Button Grid.Row="2" Grid.Column="1" Name="btnMessageBox" Content="Message Box" Height="60" Margin="10 10 10 10"/>
+                    <Button Grid.Row="3" Grid.Column="0" Name="btnShutdown" Content="Shutdown" Height="60" Margin="10 10 10 10"/>
+                    <Button Grid.Row="3" Grid.Column="1" Name="btnRestart" Content="Restart" Height="60" Margin="10 10 10 10"/>
                 </Grid>
 
             </Grid>
