--- a/ClientControl/MainWindow.xaml
+++ b/ClientControl/MainWindow.xaml
@@ -86,7 +86,7 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <CheckBox Name="ckbOverServer" Content="Over Server" Margin="10 0 0 0"/>
+                    <CheckBox Name="ckbOverServer" Content="Over Server" Margin="10 0 0 0" Checked="CkbOverServer_Checked" Unchecked="CkbOverServer_Unchecked"/>
                     <Button Grid.Row="1" Grid.Column="0" Name="btnChat" Content="Chat" Click="BtnChat_Click" Height="60" Margin="10 10 10 10"/>
                     <Button Grid.Row="1" Grid.Column="1" Name="btnFileExplorer" Content="File Explorer" Height="60" Margin="10 10 10 10"/>
                     <Button Grid.Row="2" Grid.Column="0" Name="btnViewScreen" Content="View Screen" Height="60" Margin="10 10 10 10" Click="BtnViewScreen_Click"/>
